# infra-mcp

./: .env.example  .gitignore  .mcp.json  AVAILABLE_TOOLS.md  CLAUDE.md  CODE_CLEANUP_REPORT.md  CORE_INFRASTRUCTURE_GUIDE.md  MCP_RESOURCES_SUMMARY.md  MCP_TOOLS_REFERENCE.md  MONOREPO.md  NEW_STRUCTURE.md  PHASE_1_IMPLEMENTATION_GUIDE.md  PLAN.md  POLLING_WEBSOCKET_IMPLEMENTATION_PLAN.md  README.md  TODO_UI_PASS1.md  UI_ENHANCEMENT_PLAN.md  WEBSOCKET_FIXES_SUMMARY.md  alembic.ini  debug_websocket.py  dev.sh  docker-compose.yaml  endpoint_test_results.md  enhancements.md  mcp_server.py  openapi.json  pyproject.toml  test_api_models.py  test_batch_deployment.py  test_environment_detection.py  test_models.py  test_notification_system.py  test_pydantic_schemas.py  test_websocket.py
.bivvy/: abcd-moves.json
.claude/: settings.json
.claude/agents/: api-testing-specialist.md  backend-engineer.md  bivvy.md  container-manager.md  database-testing-specialist.md  deployment-automation.md  infrastructure-engineer.md  infrastructure-monitor.md  orchestrator.md  performance-monitoring-specialist.md  qa-engineer.md  research-specialist.md  system-diagnostics.md  systems-architect.md  ui-ux-designer.md  zfs-specialist.md
.claude/hooks/: pre_tool_use_edit.py  pre_tool_use_write.py
alembic/: env.py  models.py
alembic/versions/: 52f2a147efa2_add_proxy_configuration_management_.py  af4ba97c1822_initial_migration_with_all_tables.py
apps/backend/: pyproject.toml  test_container_structure.py  test_escalation_structure.py  test_reporting_structure.py
apps/backend/alembic/: env.py  models.py
apps/backend/alembic/versions/: 0eff36db9cbd_add_glances_configuration_to_devices.py  440db6e2f1df_add_sync_and_validation_status_tracking_.py  4e7e588d185a_add_configuration_template_tables_for_.py  52f2a147efa2_add_proxy_configuration_management_.py  66cc68f4e112_fix_configuration_snapshots_id_column_.py  6a9a9e64cfe3_add_service_dependencies_table_for_.py  74b14835fbe1_add_approval_workflow_tables_for_change_.py  8ae9a0774383_add_gin_index_to_device_metadata.py  af4ba97c1822_initial_migration_with_all_tables.py  da451fed707b_rename_devices_metadata_to_device_.py  f4a2b1c8d37e_create_unified_infrastructure_schema.py  fccb9002fd60_add_notification_system_tables_for_.py
apps/backend/init-scripts/: 01-schema.sql  02-unified-schema.sql  03-policies.sql
apps/backend/src/: __init__.py  main.py
apps/backend/src/api/: CLAUDE.md  README.md  __init__.py  approval_workflow.py  audit.py  cache.py  common.py  compliance.py  compose_deployment.py  configuration.py  configuration_batch.py  configuration_template.py  configuration_timeline.py  containers.py  devices.py  export_import.py  monitoring.py  notifications.py  performance.py  proxy.py  rollback.py  vms.py  zfs.py
apps/backend/src/core/: CLAUDE.md  README.md  __init__.py  config.py  database.py  events.py  exceptions.py  logging.py  logging_config.py  middleware.py
apps/backend/src/mcp/: CLAUDE.md  __init__.py  server.py
apps/backend/src/models/: CLAUDE.md  __init__.py  approval_workflow.py  audit.py  cache.py  compliance.py  configuration.py  configuration_template.py  container.py  device.py  export_import.py  metrics.py  notification.py  performance.py  proxy_config.py  service_dependency.py  user.py
apps/backend/src/schemas/: CLAUDE.md  __init__.py  approval_workflow.py  audit.py  backup.py  cache.py  common.py  compliance.py  compose_deployment.py  configuration.py  configuration_batch.py  configuration_template.py  configuration_timeline.py  container.py  device.py  drive_health.py  export_import.py  glances.py  logs.py  network.py  notification.py  performance.py  proxy_config.py  system_metrics.py  updates.py  user.py  vm.py  zfs.py
apps/backend/src/services/: CLAUDE.md  approval_workflow_service.py  audit_service.py  cache_manager.py  cache_service.py  command_registry.py  compliance_service.py  compose_deployment.py  configuration_batch_service.py  configuration_monitoring.py  configuration_service.py  configuration_template_service.py  configuration_timeline_service.py  container_service.py  dependency_service.py  device_service.py  event_correlation.py  export_import_service.py  glances_service.py  impact_analysis.py  metrics_service.py  notification_service.py  performance_service.py  polling_service.py  remote_file_watcher.py  rollback_service.py  unified_data_collection.py
apps/backend/src/utils/: CLAUDE.md  __init__.py  cache_manager.py  command_registry.py  compose_parser.py  database_utils.py  device_manager.py  diff_generator.py  docker_client.py  environment.py  exception_handling.py  glances_client.py  nginx_parser.py  ssh_client.py  ssh_command_manager.py  ssh_config_parser.py  ssh_errors.py
apps/backend/src/websocket/: __init__.py  auth.py  connection_manager.py  message_protocol.py  server.py
apps/backend/tests/: conftest.py
apps/backend/tests/test_services/: test_configuration_monitoring.py  test_configuration_monitoring_simple.py  test_unified_data_collection.py
apps/backend/tests/test_utils/: test_command_registry.py  test_enhanced_cache_manager.py
apps/frontend/: CLAUDE.md  DESIGN_SYSTEM.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
apps/frontend/src/: App.css  App.tsx  index.css  main.tsx  router.debug.tsx  router.minimal.tsx  router.minimal2.tsx  router.stepwise.tsx  router.test.tsx  router.tsx  router.working.tsx
apps/frontend/src/app/: page.tsx
apps/frontend/src/components/: devices-table.tsx  system-metrics-chart.tsx
apps/frontend/src/contexts/: ThemeContext.tsx  (+1 more)
apps/infra-web/: package-lock.json  package.json
docker/: Dockerfile
docs/: ARCHITECTURE.md  AVAILABLE_TOOLS.md  DESTRUCTIVE_ACTION_PATTERNS.md  FRONTEND.md  IMPLEMENTATION_GUIDE.md  MCP_SERVER_TESTING.md  PHASE2.md  PHASE3.md  PHASE4.md  POLLING_WEBSOCKET_IMPLEMENTATION_PLAN.md  PRD.md  claude-code-hooks.md  docker-compose-deployment.md
docs/deployment/: SMART_MONITORING_SETUP.md  sudoers.d-smartctl
init-scripts/: 02-hypertables.sql  03-policies.sql  04-caggs.sql
(+182 files in other folders)
